--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Joaquin López</title>
+  <title>Darío Serrano</title>
   <link rel="stylesheet" href="css/estilos.css">
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
   <link rel="icon" href="favicon.ico">
@@ -13,8 +13,8 @@
   <div class="top-container">
     <img class="top-cloud" src="imagenes/cloud.png" alt="cloud">
     <div class="title-text">
-      <h1>Hola, soy Joaquin.</h1>
-      <h2>un <span class="pro">pro</span>fesor de informática.</h2>
+      <h1>Hola, soy Darío.</h1>
+      <h2>un <span class="pro">al</span>umno de informática.</h2>
     </div>
     <img class="bottom-cloud" src="imagenes/cloud.png" alt="cloud">
     <img class="mountain" src="imagenes/mountain.png" alt="mountain-img">
@@ -24,7 +24,7 @@
     <div class="profile">
       <img src="imagenes/joaquin.png" alt="angela-profile-img">
       <h2>Hola.</h2>
-      <p class="intro">Soy profesor de informática de educación secundaria. Trabajo en el IES Penyagolosa. Me ❤️ los ordenadores y el deporte.</p>
+      <p class="intro">Soy alumno de informática de 1º de bachillerato. Estudio en el IES Penyagolosa. Me ❤️ el deporte.</p>
     </div>
     <hr>
     <div class="skills">
@@ -32,23 +32,23 @@
       <div class="skill-row">
         <img class="code-img" src="https://media.giphy.com/media/WFZvB7VIXBgiz3oDXE/giphy.gif" alt="imagen programación">
 
-        <h3>Programación</h3>
-        <p>Empecé a aprender a programar cuando tenía 18 años porque quería estudiar informática. Empecé con Pascal pero con el tiempo he ido aprendiendo otros lenguajes.</p>
+        <h3>Judo</h3>
+        <p>Empecé a aprender judo a los 4 años y desde ese dia lo sigo practicando y compitiendo, soy cinturon negro desde julio.</p>
         
       </div>
       <div class="skill-row">
         <br><br>
         <img class="iot-img" src="imagenes/iot.png" alt="imagen IoT">
 
-        <h3>IoT</h3>
-        <p>Desde hace unos 8 años empecé a trabajar con arduino después raspberry pi, ESP286, LoRaWAN, etc. Junto con alumnos hemos presentado algunos proyectos a concursos y los hemos ganado :-).</p>
+        <h3>Ingeniería</h3>
+        <p>Siempre me ha gustado construir cosas y entre el año pasado y este hemos ganado nuestro primer premio de tecnología y el 22 de octubre vamos a Alicante a recoger el segundo.</p>
 
       </div>
       <div class="skill-row">
         <img class="bici-img" src="https://media.giphy.com/media/QKdZwNhXtIrqoMdjsh/giphy.gif" alt="imagen ciclismo">
 
-        <h3>Ciclismo</h3>
-        <p>Hace más de 25 años que practico ciclismo. Aunque tengo bici de carretera y de montaña, prefiero la de carretera ;-)</p>
+        <h3>Surf</h3>
+        <p>Empecé a surfear a los 11 años y desde ese dia me gusta disfrutar junto a amigos cuando el mar cuando me da la oportunidad de surfearlo. </p>
 
       </div>
     </div>
@@ -57,7 +57,7 @@
       <h2>Ponte en contacto conmigo</h2>
       <h3>Si te gusta alguna de mis aficiones tanto como a mi.</h3>
       <p class="contact-message">¿Te gusta alguna de mis aficiones? ¡Hablemos sobre los maravillosas que son!</p>
-      <a class="btn" href="mailto:joaquin@iespenyagolosa.es">CONTACTAME</a>
+      <a class="btn" href="mailto:10787939@iespenyagolosa.es">CONTACTAME</a>
     </div>
   </div>
 
@@ -66,7 +66,7 @@
     <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
     <a class="footer-link" href="https://www.iespenyagolosa.es/">Sitio web</a>
-    <p class="copyright">© 2022 Joaquin López.</p>
+    <p class="copyright">© 2022 Darío Serrano.</p>
   </div>
 </body>
 
