--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <div class="middle-container">
     <div class="profile">
-      <img src="imagenes/joaquin.png" alt="angela-profile-img">
+      <img src="Descargas/myAvatar.png" alt="angela-profile-img">
       <h2>Hola.</h2>
       <p class="intro">Soy alumno de informática de 1º de bachillerato. Estudio en el IES Penyagolosa. Me ❤️ el deporte.</p>
     </div>
