--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="skills">
       <h2>Mis destrezas.</h2>
       <div class="skill-row">
-        <img class="code-img" src="https://media.giphy.com/media/WFZvB7VIXBgiz3oDXE/giphy.gif" alt="imagen programación">
+        <img src="imagenes/imagen judo.jpg" alt="imagen Judo">
 
         <h3>Judo</h3>
         <p>Empecé a aprender judo a los 4 años y desde ese dia lo sigo practicando y compitiendo, soy cinturon negro desde julio.</p>
@@ -38,14 +38,14 @@
       </div>
       <div class="skill-row">
         <br><br>
-        <img class="iot-img" src="imagenes/iot.png" alt="imagen IoT">
+        <img src="imagenes/planos crew dragon.jpg" alt="imagen Ingeniería">
 
         <h3>Ingeniería</h3>
         <p>Siempre me ha gustado construir cosas y entre el año pasado y este hemos ganado nuestro primer premio de tecnología y el 22 de octubre vamos a Alicante a recoger el segundo.</p>
 
       </div>
       <div class="skill-row">
-        <img class="bici-img" src="https://media.giphy.com/media/QKdZwNhXtIrqoMdjsh/giphy.gif" alt="imagen ciclismo">
+        <img src="imagenes/surf.jpg" alt="imagen ciclismo">
 
         <h3>Surf</h3>
         <p>Empecé a surfear a los 11 años y desde ese dia me gusta disfrutar junto a amigos cuando el mar cuando me da la oportunidad de surfearlo. </p>
