imagenes tamaño bien

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="skills">
       <h2>Mis destrezas.</h2>
       <div class="skill-row">
-        <img src="imagenes/imagen judo.jpg" alt="imagen Judo">
+        <img src="imagenes/judo.jpg" alt="imagen Judo">
 
         <h3>Judo</h3>
         <p>Empecé a aprender judo a los 4 años y desde ese dia lo sigo practicando y compitiendo, soy cinturon negro desde julio.</p>
@@ -38,7 +38,7 @@
       </div>
       <div class="skill-row">
         <br><br>
-        <img src="imagenes/planos crew dragon.jpg" alt="imagen Ingeniería">
+        <img src="imagenes/planos.jpg" alt="imagen Ingeniería">
 
         <h3>Ingeniería</h3>
         <p>Siempre me ha gustado construir cosas y entre el año pasado y este hemos ganado nuestro primer premio de tecnología y el 22 de octubre vamos a Alicante a recoger el segundo.</p>
